<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navAuth"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.indylan.ui.auth.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/toLoginFragment"
            app:destination="@id/loginFragment" />

    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.indylan.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/toForgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />

        <action
            android:id="@+id/toRegisterFragment"
            app:destination="@id/registerFragment" />

    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.indylan.ui.auth.RegisterFragment"
        android:label="@string/registration"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/toWeb"
            app:destination="@id/navWeb">

            <argument
                android:name="title"
                app:argType="string" />

            <argument
                android:name="url"
                app:argType="string" />

        </action>

    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.indylan.ui.auth.ForgotPasswordFragment"
        android:label="@string/forgot_password"
        tools:layout="@layout/fragment_forgot_password" />

    <include app:graph="@navigation/web" />

</navigation>