<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutRegister"
        style="@style/AppConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_bottom_strip" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollRegister"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/stripsView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineStart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/margin_start" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/margin_end" />

                <!--<androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:elevation="@dimen/plane_04"
                    android:padding="1dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputEditTextTotalScore"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:srcCompat="@drawable/ic_profile" />-->

                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="82dp"
                    android:layout_height="92dp"
                    android:layout_marginBottom="30dp"
                    android:adjustViewBounds="true"
                    android:elevation="@dimen/plane_04"
                    android:src="@drawable/ic_profile"
                    app:layout_constraintBottom_toTopOf="@+id/textInputEditTextTotalScore"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:siShape="@drawable/ic_profile"
                    app:siSquare="false" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textInputEditTextTotalScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_yellow"
                    android:elevation="@dimen/plane_04"
                    android:gravity="center"
                    android:inputType="none"
                    android:padding="15dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/textInputEditTextName"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
                    tools:text="@string/total_score_d" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/textInputEditTextEmail"
                    app:layout_constraintBottom_toTopOf="@+id/textInputEditTextEmail"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEditTextTotalScore" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email_address"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/textInputEditTextPassword"
                    app:layout_constraintBottom_toTopOf="@+id/buttonChangePassword"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEditTextName" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonChangePassword"
                    style="@style/AppTheme.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/change_password_q"
                    app:layout_constraintBottom_toTopOf="@+id/textInputEditTextCurrentPassword"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEditTextEmail" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextCurrentPassword"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/current_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/textInputEditTextNewPassword"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/textInputEditTextNewPassword"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextNewPassword"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/textInputEditTextConfirmPassword"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/textInputEditTextConfirmPassword"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEditTextCurrentPassword" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextConfirmPassword"
                    style="@style/AppTheme.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/buttonUpdate"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEditTextNewPassword" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonUpdate"
                    style="@style/AppTheme.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/update"
                    app:layout_constraintBottom_toTopOf="@+id/buttonRateUs"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEditTextConfirmPassword" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonRateUs"
                    style="@style/AppTheme.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/rate_us"
                    app:backgroundTint="@color/colorBlue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonAboutUs"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAboutUs"
                    style="@style/AppTheme.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/about_us"
                    app:backgroundTint="@color/colorPurple"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toEndOf="@+id/buttonRateUs" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>